# ElasticFusion-ROS

./: README.md
Core/src/: CMakeLists.txt  ElasticFusion.h  package.xml
Core/src/Shaders/: FeedbackBuffer.h
GPUTest/src/: CMakeLists.txt  package.xml
GUI/src/: CMakeLists.txt  MainController.cpp  package.xml
GUI/src/Tools/: GUI.h  RosBagReader.hpp  RosNodeReader.cpp  RosNodeReader.hpp  ros_common.cpp  ros_common.hpp
