<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gpu_test</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="thelucid@gmail.com">Thomas Whelan</maintainer>
  <license>TODO: License declaration</license>

  <depend>suitesparse</depend>
  <depend>eigen</depend>
  <depend>pangolin</depend>
  <depend>libefusion</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
