<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>elastic_fusion</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="thelucid@gmail.com">Thomas Whelan</maintainer>
  <license>TODO: License declaration</license>

  <depend>opengl</depend>
  <depend>libopenni2-dev</depend>
  <depend>suitesparse</depend>
  <depend>zlib</depend>
  <depend>eigen</depend>
  <depend>libjpeg</depend>
  <depend>pangolin</depend>
  <depend>liblapack-dev</depend>
  <depend>libblas-dev</depend>
  <depend>libefusion</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
